--- a/styles/_variable.scss
+++ b/styles/_variable.scss
@@ -1,5 +1,7 @@
 $primary-color: #f2fbf9;
+$button-color: #00b686;
 
 :export {
     primary-color: $primary-color;
+    button-color: $button-color;
 }
