--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -6,10 +6,18 @@
     margin: 0;
 }
 
+@font-face {
+    font-family: "proxima Nova";
+    src: url("/public/fonts/proxima_ssv/ProximaNova-Regular.otf") format("opentype");
+    font-weight: normal;
+    font-style: normal;
+}
+
 html,
 body {
     max-width: 100vw;
     overflow-x: hidden;
+    font-family: "proxima-nova", sans-serif;
 }
 
 body {
