--- a/components/Banner/banner.module.scss
+++ b/components/Banner/banner.module.scss
@@ -4,7 +4,20 @@
     height: 191px;
     overflow: hidden;
     margin-top: 1rem;
-    border-radius: 20px;
+    border-radius: 12px;
+
+    .brand_logo {
+        position: absolute;
+        left: 51px;
+        top: 289px;
+        width: 246px;
+        height: 101px;
+        background: #ffffff;
+        border-radius: 10px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+    }
 
     .banner_overlay {
         position: absolute;
@@ -56,7 +69,7 @@
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .banner {
         height: 145px;
-        border-radius: 15px;
+        border-radius: 8px;
 
         .medium {
             display: block;
@@ -77,7 +90,7 @@
 @media only screen and (max-width: 767px) {
     .banner {
         height: 110px;
-        border-radius: 10px;
+        border-radius: 5px;
 
         .mobile {
             display: block;
