--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -112,7 +112,7 @@ $background-color_2: #a5d8ff;
 
 @media (max-width: 45em) {
     .header {
-        padding: 0 0.6rem;
+        padding: 0 0.7rem;
     }
 
     .header::after {
@@ -137,7 +137,7 @@ $background-color_2: #a5d8ff;
         transform: translateX(100%);
         transition: all 0.5s linear;
         opacity: 0;
-        visibility: hidden;
+        display: none;
         pointer-events: none;
     }
     .navbar_list {
