--- a/components/ProjectTabs/tabcontent.module.scss
+++ b/components/ProjectTabs/tabcontent.module.scss
@@ -20,7 +20,7 @@
             display: flex;
             align-items: center;
             justify-content: center;
-            padding: 0.4rem 0.8rem 0.4rem 0.8rem;
+            padding: 0.33rem 0.8rem 0.33rem 0.8rem;
             background-color: #f2fbf9;
             border: 1px solid #d3d7d7;
 
@@ -93,6 +93,8 @@
     background-image: url("../../public/office.png");
     background-size: cover;
     background-position: center;
+    border: 1px solid #e9ebeb;
+    border-radius: 10px;
 
     .overlay_text {
         position: absolute;
@@ -139,5 +141,45 @@
     @media (max-width: 45em) {
         height: 250px;
         background-image: url("../../public/office_medium.png");
+    }
+}
+
+.footer_icon {
+    display: flex;
+    margin-top: 1.5rem;
+
+    .footer_icon_wrapper {
+        position: relative;
+
+        .chat_badge {
+            position: absolute;
+            top: -5px;
+            left: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+            background: #00b686;
+
+            span {
+                font-style: normal;
+                font-weight: 700;
+                font-size: 9px;
+                line-height: 1;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: #ffffff;
+            }
+        }
+    }
+
+    .separator {
+        width: 1px;
+        height: 30px;
+        border: 1px solid #d3d7d7;
+        margin: 0 15px 0 15px;
     }
 }
