--- a/components/ProjectTabs/projecttabs.module.scss
+++ b/components/ProjectTabs/projecttabs.module.scss
@@ -1,6 +1,6 @@
 .project_tabs {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 1.5rem;
     font-weight: 700;
     font-style: normal;
