--- a/components/ProjectTabs/tabcontent.module.scss
+++ b/components/ProjectTabs/tabcontent.module.scss
@@ -12,6 +12,10 @@
         color: #233735;
     }
 
+    .dropdown_button {
+        display: none;
+    }
+
     .button_group {
         display: flex;
         align-items: center;
@@ -23,6 +27,8 @@
             padding: 0.33rem 0.8rem 0.33rem 0.8rem;
             background-color: #f2fbf9;
             border: 1px solid #d3d7d7;
+            position: relative;
+            cursor: pointer;
 
             &:hover {
                 background-color: #f2f2f2;
@@ -37,12 +43,21 @@
                 border-top-right-radius: 5px;
                 border-bottom-right-radius: 5px;
             }
+        }
+    }
 
-            & + button {
-                margin-left: -1px;
-                margin-top: -1px;
-                margin-bottom: -1px;
-            }
+    @media (max-width: 45em) {
+        .dropdown_button {
+            display: block;
+        }
+
+        .button_group {
+            display: none;
+        }
+
+        h2 {
+            font-size: 1rem;
+            margin-top: 2rem;
         }
     }
 }
@@ -102,45 +117,71 @@
         left: 50%;
         transform: translate(-50%, -50%);
         text-align: center;
-        color: white;
-        font-size: 36px;
         font-weight: bold;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-        line-height: 1.2;
+        line-height: 0.5rem;
+        background: rgba(255, 255, 255, 0.7);
+        padding: 1.8rem;
+
+        p {
+            font-style: normal;
+            font-weight: 700;
+            font-size: 1.25rem;
+            color: #000000;
+            margin-top: 20px;
+            line-height: normal;
+        }
     }
 
     .button_group {
-        position: absolute;
-        top: 50px;
-        left: 50%;
-        transform: translateX(-50%);
+        display: flex;
+        align-items: center;
         display: flex;
         justify-content: center;
         align-items: center;
         z-index: 1;
+        margin-top: 1rem;
 
         button {
-            padding: 12px 24px;
-            background-color: white;
-            border: 2px solid #007bff;
-            color: #007bff;
-            font-size: 18px;
-            font-weight: bold;
-            text-transform: uppercase;
-            border-radius: 30px;
-            margin: 0 10px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0.33rem 0.8rem 0.33rem 0.8rem;
+            background: rgba(255, 255, 255, 0.7);
+            border: 1px solid #d3d7d7;
+            position: relative;
             cursor: pointer;
 
             &:hover {
-                background-color: #007bff;
-                color: white;
+                background-color: #f2f2f2;
+            }
+
+            &:first-child {
+                border-top-left-radius: 5px;
+                border-bottom-left-radius: 5px;
+            }
+
+            &:last-child {
+                border-top-right-radius: 5px;
+                border-bottom-right-radius: 5px;
             }
         }
     }
 
     @media (max-width: 45em) {
-        height: 250px;
+        height: 300px;
         background-image: url("../../public/office_medium.png");
+
+        h2 {
+            font-size: 1rem;
+        }
+
+        .overlay_text {
+            padding: 1.6rem;
+
+            p {
+                font-size: 0.813rem;
+            }
+        }
     }
 }
 
@@ -177,8 +218,6 @@
     }
 
     .separator {
-        width: 1px;
-        height: 30px;
         border: 1px solid #d3d7d7;
         margin: 0 15px 0 15px;
     }
