--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -7,8 +7,8 @@
 }
 
 @font-face {
-    font-family: "proxima Nova";
-    src: url("/public/fonts/proxima_ssv/ProximaNova-Regular.otf") format("opentype");
+    font-family: "Proxima Nova";
+    src: url("/public/fonts/proxima/Proxima\ Nova\ Font.otf") format("opentype");
     font-weight: normal;
     font-style: normal;
 }
@@ -17,7 +17,7 @@ html,
 body {
     max-width: 100vw;
     overflow-x: hidden;
-    font-family: "proxima-nova", sans-serif;
+    font-family: "Proxima Nova", sans-serif;
 }
 
 body {
