--- a/components/Banner/banner.module.scss
+++ b/components/Banner/banner.module.scss
@@ -2,9 +2,8 @@
     position: relative;
     width: 100%;
     height: 191px;
-    overflow: hidden;
     margin-top: 1rem;
-    border-radius: 12px;
+    border-radius: 10px;
 
     .brand_logo {
         display: flex;
@@ -14,11 +13,16 @@
         bottom: 0;
         background: #ffffff;
         transform: translateY(50%);
-        padding: 1rem;
+        padding: 0.7rem;
         border-radius: 10px;
         margin-left: 1.5rem;
 
         .logo_1 {
+            margin-right: 0.8rem;
+            margin-left: 0.8rem;
+        }
+
+        .logo_2 {
             margin-right: 0.8rem;
             margin-left: 0.8rem;
         }
