--- a/components/Banner/banner.module.scss
+++ b/components/Banner/banner.module.scss
@@ -1,31 +1,14 @@
+.wrapper {
+    position: relative;
+}
+
 .banner {
     position: relative;
     width: 100%;
     height: 191px;
     margin-top: 1rem;
-
-    .brand_logo {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        position: absolute;
-        bottom: 0;
-        background: #ffffff;
-        transform: translateY(50%);
-        padding: 0.7rem;
-        border-radius: 10px;
-        margin-left: 1.5rem;
-
-        .logo_1 {
-            margin-right: 0.8rem;
-            margin-left: 0.8rem;
-        }
-
-        .logo_2 {
-            margin-right: 0.8rem;
-            margin-left: 0.8rem;
-        }
-    }
+    overflow: hidden;
+    border-radius: 10px;
 
     .banner_overlay {
         position: absolute;
@@ -51,6 +34,29 @@
             font-weight: 900;
             color: #000000;
         }
+    }
+}
+
+.brand_logo {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    background: #ffffff;
+    padding: 0.7rem;
+    border-radius: 10px;
+    margin-left: 15px;
+    z-index: 2;
+    bottom: -60px;
+
+    .logo_1 {
+        margin-right: 0.8rem;
+        margin-left: 0.8rem;
+    }
+
+    .logo_2 {
+        margin-right: 0.8rem;
+        margin-left: 0.8rem;
     }
 }
 
