--- a/components/Banner/banner.module.scss
+++ b/components/Banner/banner.module.scss
@@ -1,62 +1,62 @@
 .wrapper {
     position: relative;
-}
 
-.banner {
-    position: relative;
-    width: 100%;
-    height: 191px;
-    margin-top: 1rem;
-    overflow: hidden;
-    border-radius: 10px;
+    .banner {
+        position: relative;
+        width: 100%;
+        height: 191px;
+        margin-top: 1rem;
+        overflow: hidden;
+        border-radius: 10px;
 
-    .banner_overlay {
-        position: absolute;
-        top: 0;
-        right: -35%;
-        width: 59%;
-        height: 100%;
-        background-color: rgba(255, 255, 255, 0.8);
-        transform: skewX(-20deg) translateX(-30%);
-    }
+        .banner_overlay {
+            position: absolute;
+            top: 0;
+            right: -35%;
+            width: 59%;
+            height: 100%;
+            background-color: rgba(255, 255, 255, 0.8);
+            transform: skewX(-20deg) translateX(-30%);
+        }
 
-    .banner_content {
-        position: absolute;
-        top: 50%;
-        left: 56%;
-        transform: translate(-50%, -50%);
-        width: 80%;
-        max-width: 800px;
-        margin: 0 auto;
-        text-align: end;
+        .banner_content {
+            position: absolute;
+            top: 50%;
+            left: 56%;
+            transform: translate(-50%, -50%);
+            width: 80%;
+            max-width: 800px;
+            margin: 0 auto;
+            text-align: end;
 
-        h1 {
-            font-weight: 900;
-            color: #000000;
+            h1 {
+                font-weight: 900;
+                color: #000000;
+            }
         }
     }
-}
 
-.brand_logo {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: absolute;
-    background: #ffffff;
-    padding: 0.7rem;
-    border-radius: 10px;
-    margin-left: 15px;
-    z-index: 2;
-    bottom: -60px;
+    .brand_logo {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: absolute;
+        background: #ffffff;
+        padding: 0.7rem;
+        border-radius: 10px;
+        margin-left: 15px;
+        z-index: 2;
+        bottom: -60px;
 
-    .logo_1 {
-        margin-right: 0.8rem;
-        margin-left: 0.8rem;
-    }
+        .logo_1 {
+            margin-right: 0.8rem;
+            margin-left: 0.8rem;
+        }
 
-    .logo_2 {
-        margin-right: 0.8rem;
-        margin-left: 0.8rem;
+        .logo_2 {
+            margin-right: 0.8rem;
+            margin-left: 0.8rem;
+        }
     }
 }
 
@@ -76,7 +76,7 @@
     }
 }
 
-// Show medium banner image for screens between 768px and 1023px wide
+// medium banner image for screens between 768px and 1023px wide
 @media only screen and (min-width: 768px) and (max-width: 1023px) {
     .banner {
         height: 145px;
@@ -99,23 +99,31 @@
 }
 
 @media only screen and (max-width: 767px) {
-    .banner {
-        height: 110px;
-        border-radius: 5px;
+    .wrapper {
+        .banner {
+            border-radius: 5px;
+            height: 92px;
 
-        .mobile {
-            display: block;
-        }
-
-        .desktop,
-        .medium {
-            display: none;
-        }
-
-        .banner_content {
-            h1 {
-                font-size: 16px;
+            .mobile {
+                display: block;
             }
+
+            .desktop,
+            .medium {
+                display: none;
+            }
+
+            .banner_content {
+                h1 {
+                    font-size: 16px;
+                }
+            }
+        }
+
+        .brand_logo {
+            margin-left: 8px;
+            padding: 0.6rem;
+            bottom: -30px;
         }
     }
 }
