--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -137,7 +137,7 @@ $background-color_2: #a5d8ff;
         transform: translateX(100%);
         transition: all 0.5s linear;
         opacity: 0;
-        display: none;
+        visibility: hidden;
         pointer-events: none;
     }
     .navbar_list {
