Mobile Navbar --  Fix

--- a/styles/_base.scss
+++ b/styles/_base.scss
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: "Proxima Nova";
-    src: url("/public/fonts/proxima/Proxima\ Nova\ Font.otf") format("opentype");
+    src: url("/public/fonts/proxima/proxima.otf") format("opentype");
     font-weight: normal;
     font-style: normal;
 }
