--- a/components/Navbar/navbar.module.scss
+++ b/components/Navbar/navbar.module.scss
@@ -1,7 +1,3 @@
-$color_2: #364fc7;
-$background-color_1: #e7f5ff;
-$background-color_2: #a5d8ff;
-
 .header {
     padding: 0 2.6rem 0 1.6rem;
     height: 4.8rem;
@@ -53,13 +49,17 @@ $background-color_2: #a5d8ff;
             }
 
             .navbar_link {
-                display: flex;
+                display: inline-block;
                 align-items: center;
                 justify-content: center;
                 width: 100%;
                 height: 100%;
                 cursor: pointer;
                 text-decoration: none;
+            }
+
+            .navbar_text {
+                display: none;
             }
 
             .navbar_icon_wrapper {
@@ -127,7 +127,7 @@ $background-color_2: #a5d8ff;
     .navbar {
         width: 100%;
         height: 100vh;
-        background: #e7f5ff;
+        background: #f2fbf9;
         position: absolute;
         top: 0;
         left: 0;
@@ -150,6 +150,54 @@ $background-color_2: #a5d8ff;
             opacity: 1;
             visibility: visible;
             pointer-events: auto;
+            z-index: 999;
+
+            ul {
+                list-style: none;
+                margin: 0;
+                padding: 0;
+
+                li {
+                    display: flex;
+                    border-top: 1px solid #e9ebeb;
+                    border-bottom: 1px solid #e9ebeb;
+                    min-width: 230px;
+                    padding: 2rem 0 3rem 0;
+
+                    &:nth-last-child(1) {
+                        order: -1;
+                        border-bottom: 0px;
+                        text-transform: capitalize;
+                        width: 100%;
+
+                        h4 {
+                            font-size: 0.9rem;
+                        }
+
+                        p {
+                            font-size: 0.5rem;
+                        }
+                    }
+
+                    a {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-around;
+                    }
+
+                    .navbar_text {
+                        flex: 1;
+                        text-align: left;
+                        margin-left: 2rem;
+                        display: block;
+                        font-size: 1rem;
+                        font-style: normal;
+                        font-weight: 400;
+                        line-height: 16px;
+                        color: #233735;
+                    }
+                }
+            }
         }
         .mobile_navbar_btn {
             .mobile_nav_icon {
